# Surrogate-model-piston-cycle

./: LICENSE.md  README.md  pyproject.toml  setup.py  sm_environment.yml
src/piston_sim_fun_surrogate_murkoa/: __init__.py  piston_fun_sm.py  surr-mod-piston-fun.py
src/piston_sim_fun_surrogate_murkoa/data/: param_data.yml
src/piston_sim_fun_surrogate_murkoa/mod/: box_plot.py  compare_true_pred_mod.py  lolipop_plot.py  param_pred_true.py  parameter_depend.py  performance_calc.py  performance_mod.py  plot_settings_mod.py  predict_mod.py  predict_mult_mod.py  show_folds_mod.py  spyderweb_plot.py
