[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piston_sim_fun_surrogate_murkoa"
version = "0.0.1"
authors = [
  { name="Anze Murko", email="anze.murko@outlook.com" },
]
description = "Python package for different types of
		surrogate modeling of piston simulation function."
readme = "README.md"
requires-python = ">=3.10.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language" :: English",
    "Topic :: Scientific/Engineering",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"